2003-03-10  Reinhard Spisser  <reinhard@spisser.it>


	* www/include/languages/SimplifiedChinese.tab:
	Committing Simon Lei's translations to Chines
	
	* www/include/languages/Italian.tab
	translations
	

2003-03-08  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/people/index.php: valid XHTML 1.0 Transitional.

	* www/people/people_utils.php(people_header): remove
	unneeded </strong>.
	(people_show_job_inventory): valid XHTML.

	* www/include/languages/Base.tab(people:about_blurb): XHTML-ise.

2003-03-07  Reinhard Spisser <reinhard@spisser.it>

	* www/include/languages/Italian.tab:
	more translations

	* www/include/languages/SimplifiedChinese.tab:
	applied patch #242

	* docs/xdocs/*:
	documentation improvements

	* install
	SF->GForge

2003-03-02  Ryan T. Sammartino  <ryants@shaw.ca>

	Bug #218
	* www/snippet/submit.php: comment out links to 'Suggest New
	Language' and 'Suggest new category', marked with a FIXME
	now, until we can figure out where they really should go.

	* www/new/index.php: valid XHTML 1.0 Transitional.

	* www/include/languages/Base.tab(newe:notes_changes): use
	&amp; instead of just &.

2003-03-01  Ryan T. Sammartino  <ryants@shaw.ca>

	Bug #229
	* www/include/html.php(html_abs_image): new function.
	(html_dbimage): use html_abs_image().  XHTML-ify URL.
	(html_image): use html_abs_image().

	* www/my/bookmark_add.php: valid XHTML 1.0 Transitional.

	* www/my/bookmark_delete.php: do not go to a separate page and
	force the user to return: just update the current page and
	it is obvious the bookmark is gone.

	* www/include/bookmarks.php(bookmark_edit): add feedback.

	* www/my/bookmark_edit.php: fix site_user_header.  valid
	XHTML 1.0 Transitional.

	* www/my/diary.php: valid XHTML 1.0 Transitional.

	* www/include/languages/Base.tab
	(survey_add_question:show_existing_questions): add missing tab.
	(survey_add_question:show_existing_surveys): remove duplicate
	entry.
	(my_bookmark_edit:bookmark_updated):