@@ -1174,8 +1174,28 @@ eval {
       $dbh->commit () ;
     }
 
+    $version = &get_db_version ;
+    $target = "2.6-0+checkpoint+28" ;
+    if (is_lesser $version, $target) {
+      debug "Upgrading with 20030312.sql" ;
+
+      @reqlist = @{ &parse_sql_file ("/usr/lib/gforge/db/20030312.sql") } ;
+      foreach my $s (@reqlist) {
+	  $query = $s ;
+	  # debug $query ;
+	  $sth = $dbh->prepare ($query) ;
+	  $sth->execute () ;
+	  $sth->finish () ;
+      }
+      @reqlist = () ;
+
+      &update_db_version ($target) ;
+      debug "Committing $target." ;
+      $dbh->commit () ;
+    }
+
     debug "It seems your database $action went well and smoothly.  That's cool." ;
-    debug "Please enjoy using Debian Sourceforge." ;
+    debug "Please enjoy using Gforge." ;
 
     # There should be a commit at the end of every block above.
     # If there is not, then it might be symptomatic of a problem.
